maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:1: error: ';' expected but 'else' found.
def keepHandOnSideWall = {if (estFaceMur()) {gauche(); if (estFaceMur) {retourne();avance()} else { avance()} else {avance()} }}
                                                                                                              ^