maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall = {if (estFaceMur()) {gauche(); if (estFaceMur) {retourne();avance()} else { avance()} else {avance()} }}

override def run() { 
  
  
  while (!estSurBiscuit()) {keepHandOnSideWall}; prendBiscuit()
}